# AIstudioProxyAPI

./: .flake8  .gitignore  .pre-commit-config.yaml  GEMINI_NATIVE_AUDIO_SUPPORT.md  Makefile  PROJECT_CONFIG_UPDATE.md  README-Docker.md  README.md  docker-compose.yml  excluded_models.txt  key.txt  launch_camoufox.py  llm.py  pyproject.toml  pyrightconfig.json  server.py  test_api.py  test_model_support.py
api_utils/: __init__.py  app.py  auth_utils.py  client_connection.py  context_init.py  context_types.py  graceful_shutdown.py  model_manager.py  queue_worker.py  request_processor.py  response_generators.py  server_state.py  session_manager.py  state_manager.py  state_migration.py  task_manager.py
api_utils/routers/: chat.py
api_utils/utils_ext/: stream.py
browser_utils/: __init__.py  auth_rotation.py  debug_utils.py  initialization.py  model_management.py  operations.py  page_controller.py  resource_manager.py  response_modifiers.py  thinking_normalizer.py
browser_utils/initialization/: auth.py  core.py  debug.py
browser_utils/models/: startup.py  switcher.py  ui_state.py
browser_utils/operations_modules/: errors.py  interactions.py  parsers.py
browser_utils/page_controller_modules/: chat.py  input.py  parameters.py  response.py  thinking.py
config/: __init__.py  custom_models.json  selector_utils.py  selectors.py
deprecated_javascript_version/: server.cjs
docker/: Dockerfile  docker-compose.yml  update.sh
launcher/: checks.py  process.py  runner.py
logging_utils/: setup.py
logging_utils/core/: logger.py  rendering.py
models/: __init__.py  exceptions.py  logging.py
stream/: proxy_server.py
tests/: conftest.py  test_auth_utils.py  test_concurrency_safety.py  test_resource_manager.py  test_task_manager.py
tests/browser_utils/page_controller_modules/: test_chat_controller.py  test_thinking.py
tests/config/: test_selector_utils.py
